Fix slider bug.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -150,10 +150,11 @@
       </section>
       <section class="footer-mondo">
         <p>MondoTV</p>
-        <p>20-22 Wenlock Road, London, England, N1 7GU</p>
+        <p>20-22 Wenlock Road, London,</p>
+        <p>England, N1 7GU</p>
         <ul class="footer-terms">
           <li>&copy; MondoTV Ltd. 2016.</li>
-          <li> | </li>
+          <li>|</li>
           <li>Terms:</li>
           <li><a href="" class="pure-button">Conditions</a></li>
           <li><a href="" class="pure-button">Service</a></li>
