--- a/src/less/home.less
+++ b/src/less/home.less
@@ -31,6 +31,7 @@
 .video-list >.video-item img {
   margin: auto;
   width: 220px;
+  color: #fff;
   .border-radius(0.188em);
 }
 
@@ -317,6 +318,7 @@
 }
 
 .slick-dots {
+  list-style: none;
   margin: 0;
   bottom: 1rem;
   left: 50%;
@@ -325,25 +327,36 @@
 }
 
 .slick-dots > li {
-  list-style: none;
   display: inline-block;
 }
 
 .slick-dots > li > button {
-  height: 8px;
-  width: 8px;
-  border-radius: 50%;
+  height: 3px;
+  width: 32px;
+  border-radius: 2px;
   background: #fff;
   margin-right: 2rem;
   opacity: 0.5;
 }
 
 .slick-dots > li:not(:last-child) > button {
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 .slick-active > button {
   opacity: 1!important;
+}
+
+.slick-slide {
+  display: none;
+}
+
+.slick-slide:first-child {
+  display: block;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
 }
 
 .slick-slide > .slide-content {
