--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -1,23 +1,20 @@
 <section class="pure-g page-content" ng-controller="HomeController as vm">
-  <div class="pure-u-1 filter-list ng-cloaked" ng-init="filters.categories=''">
+  <div class="pure-u-1 filter-list ng-cloak" ng-init="filters.categories=''">
     <label>
       <input type="radio" ng-model="filters.categories" ng-model-options="{ debounce: 500 }" value="" />
       <span class="pure-button hover-brand">All</span>
     </label>
     <label ng-repeat="tag in vm.categories">
-      <input type="radio" ng-model="filters.categories" ng-model-options="{ debounce: 500 }" value="{{ tag.slug }}" />
+      <input type="radio" ng-model="filters.categories" ng-model-options="{ debounce: 500 }" value="{{ ::tag.slug }}" />
       <span class="pure-button hover-orange">{{ ::tag.name }}</span>
     </label>
     <select class="pure-button hover-blue" ng-model="filters.brands" ng-model-options="{ debounce:500 }">
       <option value="">All Brands</option>
-      <option value="category-brand-one">Brand One</option>
-      <option value="category-brand-two">Brand Two</option>
-      <option value="category-brand-three">Brand Three</option>
-      <option value="category-brand-four">Brand Four</option>
+      <option ng-repeat="brand in vm.brands" value="{{ ::brand.slug }}">{{ ::brand.name }}</option>
     </select>
   </div>
   <div class="pure-u-1">
-    <div class="pure-g video-list">
+    <div class="pure-g video-list ng-cloak">
       <div ng-repeat="video in vm.allVideos | filter:filters.categories" class="pure-u-2 pure-u-sm-1-3 pure-u-lg-1-4 pure-u-xl-1-5 video-item" ng-class="video.tags">
         <a href="https://www.youtube.com/watch?v=5lGoQhFb4NM" data-lity>
           <img class="pure-img ng-cloak" ng-src="{{ ::video.featured_media.sizes.medium.source_url }}" alt="{{ ::video.title.rendered }}" />
@@ -31,11 +28,11 @@
   </div>
 </section>
 
-<section class="slider-contain page-content">
-  <slick class="featured-articles" infinite="true" autoplay="true" dots="true" arrows="true" data="vm.allFeatured" ng-if="vm.allFeatured.length">
-    <div ng-repeat="post in vm.allFeatured" style="background-image:url({{ ::post.featured_media.sizes.large.source_url }})">
+<section class="slider-contain page-content" ng-if="vm.allFeatured.length">
+  <slick class="featured-articles ng-cloak" init-onload=true infinite="true" autoplay="true" dots="true" arrows="false" data="vm.allFeatured">
+    <div ng-repeat="post in vm.allFeatured" style="background-image:url({{ post.featured_media.sizes.large.source_url }})">
       <div class="slide-content">
-        <h1>{{ ::post.title.rendered }}</h1>
+        <h1>{{ post.title.rendered }}</h1>
         <a class="pure-button" ui-sref="post({ id: post.ID, title: post.slug })">Read More</a>
         <a class="pure-button">Get In Touch</a>
       </div>
