--- a/src/less/main.less
+++ b/src/less/main.less
@@ -62,7 +62,6 @@ nav {
 .header-img > .strapline {
   margin-top: 3em;
   padding: 0 1em;
-  font-family: 'Nexa Bold', sans-serif;
   text-transform: uppercase;
 }
 
@@ -282,6 +281,7 @@ body.projects .main-view {
 
 .footer-terms > li {
   display: inline-block;
+  padding: 0 0.25em;
 }
 
 .footer-terms .pure-button {
