--- a/src/app/index.html
+++ b/src/app/index.html
@@ -53,6 +53,7 @@
         bottom: 0;
         left: 0;
         background: #fff;
+        z-index: 99999;
       }
 
       .main-loading-icon {
@@ -156,8 +157,8 @@
           <li>&copy; MondoTV Ltd. 2016.</li>
           <li>|</li>
           <li>Terms:</li>
-          <li><a href="" class="pure-button">Conditions</a></li>
-          <li><a href="" class="pure-button">Service</a></li>
+          <li><a href="/terms/conditions" class="pure-button">Conditions</a></li>
+          <li><a href="/terms/service" class="pure-button">Service</a></li>
         </ul>
       </section>
     </footer>
