--- a/src/less/main.less
+++ b/src/less/main.less
@@ -175,7 +175,7 @@ nav.sticky .pure-menu-item.menu-logo {
   margin: 0 1em;
 }
 
-body.about .main-view,
+body.process .main-view,
 body.contact .main-view,
 body.clients .main-view,
 body.projects .main-view {
