--- a/src/app/index.html
+++ b/src/app/index.html
@@ -71,21 +71,8 @@
   <body ng-controller="AppController as vm" class="{{ vm.activeSection }}">
 
     <nav class="menu-view" sticky sticky-class="sticky">
-      <div class="pure-menu pure-menu-horizontal">
-        <ul class="pure-menu-list">
-          <li class="pure-menu-item menu-logo"><a href="/"></a></li>
-          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'process'}" href="process">How It Works</a></li>
-          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" href="projects" >Projects</a></li>
-          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" href="clients" >Clients</a></li>
-          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' || vm.activeSection === 'post' || vm.activeSection === 'postsByTag' || vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
-          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'contact'}" href="contact">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-
-    <section class="header pure-g">
-      <div class="pure-u-1-3">
-        <div class="pure-dropdown">
+      <section class="menu-contain">
+        <div class="pure-dropdown pure-dropdown-left">
           <a class="pure-button">Contact</a>
           <ul class="header-info dropdown-menu">
             <li><a href=""><span class="icon-location"> 20-22 Wenlock Road, London, England, N1 7GU</span></a></li>
@@ -93,15 +80,17 @@
             <li><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
           </ul>
         </div>
-      </div>
-      <div class="pure-u-1-3 header-img">
-        <a ui-sref="home">
-          <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.jpg" alt="MondoTV"/>
-        </a>
-        <h4 class="strapline">We make web based branded video content. Tech focused, Doctor approved. Check it out.</h4>
-      </div>
-      <div class="pure-u-1-3">
-        <div class="pure-dropdown">
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item menu-logo"><a href="/"></a></li>
+            <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'process'}" href="process">How It Works</a></li>
+            <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" href="projects" >Projects</a></li>
+            <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" href="clients" >Clients</a></li>
+            <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' || vm.activeSection === 'post' || vm.activeSection === 'postsByTag' || vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
+            <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'contact'}" href="contact">Contact</a></li>
+          </ul>
+        </div>
+        <div class="pure-dropdown pure-dropdown-right">
           <a class="pure-button">@mondotvuk</a>
           <ul class="dropdown-menu header-social">
             <li><a href=""><span class="icon-vimeo"></span></a></li>
@@ -111,6 +100,19 @@
             <li><a href=""><span class="icon-linkedin"></span></a></li>
           </ul>
         </div>
+      </section>
+    </nav>
+
+    <section class="header pure-g">
+      <div class="pure-u-1-3">
+      </div>
+      <div class="pure-u-1-3 header-img">
+        <a ui-sref="home">
+          <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.jpg" alt="MondoTV"/>
+        </a>
+        <h4 class="strapline">We make web based branded video content. Tech focused, Doctor approved. Check it out.</h4>
+      </div>
+      <div class="pure-u-1-3">
       </div>
     </section>
 
