--- a/src/less/home.less
+++ b/src/less/home.less
@@ -33,6 +33,11 @@
   width: 220px;
   color: #fff;
   .border-radius(0.188em);
+  .transition(~'all 0.3s');
+}
+
+.video-list >.video-item img:hover {
+  opacity: 0.75;
 }
 
 .video-list >.video-item:nth-child(5n+1) img {
@@ -61,7 +66,6 @@
 
 .button-section {
   position: relative;
-  margin:0 0 4em;
   text-align: center;
 }
 
