--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -18,7 +18,7 @@
       </div>
     </div masonry>
     <hr />
-    <!-- Video List -->
+    <!-- Video List
     <div class="pure-g video-list ng-cloak">
       <div ng-repeat="video in vm.allVideos | filter:filters.categories" class="pure-u-1 pure-u-sm-1-2 pure-u-lg-1-4 pure-u-xl-1-5 video-item" ng-class="video.tags">
         <a href="https://{{ ::video.videoUrl }}" data-lity>
@@ -26,7 +26,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="pure-u-1 button-section">
     <img class="loading-icon" src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/loading.gif" alt="Content loading" ng-if="vm.loading" /><br />
     <a ng-click="vm.fetchMoreVideos()" class="pure-button pure-button-primary" ng-if="vm.moreVideos">More Videos <span class="icon-plus"></span></a>
