--- a/src/less/home.less
+++ b/src/less/home.less
@@ -64,6 +64,14 @@
   }
 }
 
+.video-item {
+  margin-bottom: 75px;
+}
+
+.video-item > img {
+  width: 100%;
+}
+
 .button-section {
   position: relative;
   text-align: center;
