--- a/src/app/index.html
+++ b/src/app/index.html
@@ -86,15 +86,11 @@
     </nav>
 
     <section class="header pure-g">
-      <div class="pure-u-1-3">
-      </div>
-      <div class="pure-u-1-3 header-img">
+      <div class="pure-u-1 header-img">
         <a ui-sref="home">
           <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.jpg" alt="MondoTV"/>
         </a>
         <h4 class="strapline">We make web based branded video content. Tech focused, Doctor approved. Check it out.</h4>
-      </div>
-      <div class="pure-u-1-3">
       </div>
     </section>
 
