--- a/src/less/home.less
+++ b/src/less/home.less
@@ -20,6 +20,7 @@
 
 .video-list {
   padding: 0;
+  .transition(~'all 0.3s');
 }
 
 .video-list > .video-item {
@@ -37,7 +38,7 @@
 }
 
 .video-list >.video-item img:hover {
-  opacity: 0.75;
+  .box-shadow(~'0px 0px 0px 3px #59b7d3');
 }
 
 .video-list >.video-item:nth-child(5n+1) img {
