--- a/src/less/home.less
+++ b/src/less/home.less
@@ -4,7 +4,7 @@
   text-align: center;
 }
 
-.filter-list > label {
+.filter-list > button {
   display: inline-block;
   margin: 0 0.25em 0.5em 0;
 }
@@ -19,58 +19,94 @@
 }
 
 .video-list {
-  padding: 0;
-  .transition(~'all 0.3s');
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+  width: 90%;
+  max-width: 1400px;
+  padding: 1.5em 0 3em;
+  text-align: center;
+  .user-select(none);
+  @media (min-width: 35.5em) {
+    width: 100%;
+  }
 }
 
+.video-list:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.video-sizer,
 .video-list > .video-item {
-  margin: 0.5em 0 1em;
+  position: relative;
+  float: left;
+  width: 100%%;
+  padding: 0.75em;
   color: transparent;
-  .transition(~'all 0.5s cubic-bezier(.36,-0.64,.34,1.76)');
+  text-align: center;
+  @media (min-width: 35.5em) {
+    width: 50%;
+  }
+  @media (min-width: 48em) {
+    width: 33.333%;
+    width: calc(100% / 3);
+  }
+  @media (min-width: 64em) {
+    width: 25%;
+  }
 }
 
 .video-list >.video-item img {
-  margin: auto;
-  width: 220px;
-  color: #fff;
-  .border-radius(0.188em);
-  .transition(~'all 0.3s');
-}
-
-.video-list >.video-item img:hover {
-  .box-shadow(~'0px 0px 0px 3px #59b7d3');
-}
-
-.video-list >.video-item:nth-child(5n+1) img {
-  @media (min-width: 80em) {
-    margin: auto auto auto 0;
-  }
-}
-
-.video-list >.video-item:nth-child(5n+2) img {
-  @media (min-width: 80em) {
-    margin: auto auto auto  ~'calc((100% - 220px) / 4)';
-  }
-}
-
-.video-list >.video-item:nth-child(5n+4) img {
-  @media (min-width: 80em) {
-    margin: auto ~'calc((100% - 220px) / 4)' auto auto;
-  }
-}
-
-.video-list >.video-item:nth-child(5n+5) img {
-  @media (min-width: 80em) {
-    margin: auto 0 auto auto;
-  }
-}
-
-.video-item {
-  margin-bottom: 75px;
-}
-
-.video-item > img {
+  display: inline-block;
   width: 100%;
+  .border-radius(0.313em);
+  .transition(~'all 0.3s');
+  @media (min-width: 35.5em) {
+    width: 90%;
+  }
+  @media (min-width: 48em) {
+    width: 85%;
+  }
+  @media (min-width: 64em) {
+    width: 80%;
+  }
+}
+
+.video-item figure {
+  margin: 0;
+}
+
+.video-item .video-caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  padding: 0 1.25em;
+  text-align: center;
+  opacity: 0;
+  z-index: 10;
+  .transition(~'opacity 0.5s');
+  .transform(~'translate(-50%, -50%)')
+}
+
+.video-caption > h3 {
+  display: inline-block;
+  padding: 0.25em 0.5em;
+  max-width: 75%;
+  color: #fff!important;
+  text-transform: uppercase;
+  border: 1px solid #fff;
+  .border-radius(0.188em);
+}
+
+.video-item:hover img {
+  .brightness-filter(0.4);
+}
+
+.video-item:hover .video-caption {
+  opacity: 1;
 }
 
 .button-section {
