--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -1,18 +1,19 @@
 @charset "UTF-8";
-/* icon-font */
 
+/* untitled-font-2 */
 @font-face {
   font-family: "icon-font";
-  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.eot");
-  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.eot?#iefix") format("embedded-opentype"),
-    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.woff") format("woff"),
-    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.ttf") format("truetype"),
-    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.svg#1473792592") format("svg");
+  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1474370638.eot");
+  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1474370638.eot?#iefix") format("embedded-opentype"),
+    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1474370638.woff") format("woff"),
+    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1474370638.ttf") format("truetype"),
+    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1474370638.svg#1474370638") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
-[data-icon]:before {
+[data-icon]:before,
+span.icon:before {
   font-family: "icon-font" !important;
   content: attr(data-icon);
   font-style: normal !important;
@@ -37,82 +38,108 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .icon-location:before {
-    content: "\68";
+  content: "\68";
 }
-
 .icon-paper-plane:before {
-    content: "\69";
+  content: "\69";
 }
-
 .icon-phone:before {
-    content: "\6a";
+  content: "\6a";
 }
-
 .icon-dot-3:before {
-    content: "\6c";
+  content: "\6c";
 }
-
 .icon-cancel:before {
-    content: "\6e";
+  content: "\6e";
 }
-
 .icon-down-open:before {
-    content: "\6d";
+  content: "\6d";
 }
-
 .icon-left-open:before {
-    content: "\67";
+  content: "\67";
 }
-
 .icon-right-open:before {
-    content: "\6b";
+  content: "\6b";
 }
-
 .icon-up-open:before {
-    content: "\66";
+  content: "\66";
 }
-
 .icon-play-circle:before {
-    content: "\71";
+  content: "\71";
 }
-
 .icon-search:before {
-    content: "\72";
+  content: "\72";
 }
-
 .icon-vimeo:before {
-    content: "\73";
+  content: "\73";
 }
-
 .icon-twitter:before {
-    content: "\74";
+  content: "\74";
 }
-
 .icon-skype:before {
-    content: "\75";
+  content: "\75";
 }
-
 .icon-linkedin:before {
-    content: "\76";
+  content: "\76";
 }
-
 .icon-pinterest:before {
-    content: "\77";
+  content: "\77";
 }
-
 .icon-facebook:before {
-    content: "\78";
+  content: "\78";
 }
-
 .icon-play:before {
-    content: "\79";
+  content: "\79";
 }
-
 .icon-tumblr:before {
   content: "\61";
 }
-
 .icon-plus:before {
   content: "\62";
+}
+.icon-tint:before,
+.icon.category-animation:before {
+  content: "\63";
+}
+.icon-child:before,
+.icon.category-ben:before {
+  content: "\64";
+}
+.icon-beer:before,
+.icon.category-event:before {
+  content: "\6f";
+}
+.icon-rocket:before,
+.icon.category-crowdfunding:before {
+  content: "\70";
+}
+.icon-info:before,
+.icon.category-explainer:before {
+  content: "\65";
+}
+.icon-black-tie:before,
+.icon.category-fashion:before {
+  content: "\7a";
+}
+.icon-qq:before,
+.icon.category-funny:before {
+  content: "\41";
+}
+.icon-heart:before,
+.icon.category-health:before {
+  content: "\42";
+}
+.icon-exclamation:before,
+.icon.category-inspirational:before {
+  content: "\43";
+}
+.icon-star:before,
+.icon.category-promo:before {
+  content: "\44";
+}
+.icon-magic:before,
+.icon.category-whoop:before {
+  content: "\45";
 }
