--- a/src/app/blog/post.view.html
+++ b/src/app/blog/post.view.html
@@ -1,15 +1,10 @@
 <div class="pure-g page-content">
-    <div class="pure-u-1">
-        <h1>{{ vm.post.title }}</h1>
-
+    <div class="pure-u-1" ng-class="vm.post.tags">
+        <h1>{{ ::vm.post.title.rendered }}</h1>
+        <span class="brand-logo"></span>
         <div class="post-meta">
-            <div class="date">
-                {{ vm.post.date | date:'dd MMM yyyy' }}
-            </div>
             <ul class="tags">
-                <li ng-repeat="tag in vm.post.terms.post_tag">
-                    <a ui-sref="postsByTag({ tag: tag.slug })" ng-if="tag.slug !== 'active'">{{ tag.name }}</a>
-                </li>
+                <li ng-repeat="tag in vm.post.tags"><span class="{{ ::tag }}"></span></li>
             </ul>
         </div>
 
