--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -10,25 +10,18 @@
       <li class="video-item" ng-repeat="video in vm.allVideos" ng-class="video.tags" isotope-item ng-cloak>
         <a href="{{ ::video.videoUrl }}" data-lity>
           <figure>
-            <img class="pure-img" ng-src="{{ ::video.featured_media.sizes.medium.source_url }}" imageLoaded="vm.$emit('iso-method', {name:null, params:null})" alt="{{ ::video.title.rendered }}" />
+            <img class="pure-img" ng-src="{{ ::video.featured_media.sizes.medium.source_url }}" alt="{{ ::video.title.rendered }}" />
             <figcaption class="video-caption">
               <h3>{{ ::video.title.rendered }}</h3>
             </figcaption>
           </figure>
+          <span class="brand-logo"></span>
         </a>
-        <!--<ul>
-          <li ng-repeat="tag in video.tags"><span class="{{ tag }}"></span></li>
-        </ul>-->
+        <ul class="type-list">
+          <li class="type-item" ng-repeat="tag in video.tags"><div class="icon {{ ::tag }}"></div></li>
+        </ul>
       </li>
     </ul>
-    <!--
-    <div class="pure-g video-list ng-cloak">
-      <div ng-repeat="video in vm.allVideos | filter:filters.categories" class="pure-u-1 pure-u-sm-1-2 pure-u-lg-1-4 pure-u-xl-1-5 video-item" ng-class="video.tags">
-        <a href="https://{{ ::video.videoUrl }}" data-lity>
-          <img class="pure-img ng-cloak" ng-src="{{ ::video.featured_media.sizes.medium.source_url }}" alt="{{ ::video.title.rendered }}" />
-        </a>
-      </div>
-    </div> -->
   </div>
   <div class="pure-u-1 button-section">
     <img class="loading-icon" src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/loading.gif" alt="Content loading" ng-if="vm.loading" /><br />
