--- a/src/less/home.less
+++ b/src/less/home.less
@@ -1,5 +1,5 @@
 .filter-list {
-  margin: 0 auto 2em;
+  margin: auto;
   max-width: 600px;
   text-align: center;
 }
@@ -42,7 +42,8 @@
 .video-list > .video-item {
   position: relative;
   float: left;
-  width: 100%%;
+  width: 100%;
+  height: 17em;
   padding: 0.75em;
   color: transparent;
   text-align: center;
@@ -52,9 +53,11 @@
   @media (min-width: 48em) {
     width: 33.333%;
     width: calc(100% / 3);
+    height: 16em
   }
   @media (min-width: 64em) {
     width: 25%;
+    height: 15em;
   }
 }
 
@@ -75,6 +78,7 @@
 }
 
 .video-item figure {
+  position: relative;
   margin: 0;
 }
 
@@ -97,7 +101,6 @@
   max-width: 75%;
   color: #fff!important;
   text-transform: uppercase;
-  border: 1px solid #fff;
   .border-radius(0.188em);
 }
 
@@ -107,6 +110,13 @@
 
 .video-item:hover .video-caption {
   opacity: 1;
+}
+
+.type-list {
+  position: absolute;
+  top: 0;
+  right: 0;
+  list-style: none;
 }
 
 .button-section {
